PiCenter Changelog


1.0.00a

Build 100107
    Invalidate user on http session expiration.

11/08/2019
Build 100106
    Finished login impl.

11/03/2019
Build 100105
    Added ui logonpage tests.

11/02/2019
Build 100104
    Added restuser bean.
    Added getrestuser to userservice.
    Added "/" mapping to main rest controller.
    Added logon form to ui.

10/27/2019
Build 100103
    Working socket server impl.

10/13/2019
Build 100102
    Impl AppUser Table.
    Impl. Reading Table.
    Impl. UserLog Table.
    Started UserSession Impl.
    Added appUser_userSession join table.

10/05/2019
Build 100101
    Initial MySQL Impl.