@@ -5,6 +5,7 @@ PiCenter Changelog
 
 Build 100107
     Invalidate user on http session expiration.
+    Added room constants.
 
 11/08/2019
 Build 100106
